[package]
name = "test-github-app"
version = "0.1.0"
edition = "2021"
authors = ["harmless-tech"]
description = "DEV"
readme = "README.md"
license = "MIT"
#homepage = ""
repository = "https://github.com/harmless-tech/test-github-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["tracing"] }
bb8 = "0.8.0"
bb8-redis = "0.13.0"
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.17.1"
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["limit", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
